--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,7 +32,8 @@
 
         <activity
             android:name=".ListActivity"
-            android:label="@string/title_list_activity" >
+            android:label="@string/title_list_activity"
+            android:alwaysRetainTaskState="true">
         </activity>
 
         <meta-data
